# airpods

./: CMakeLists.txt  Makefile  README.md  ble  go.mod
.cache/clangd/index/: ble.cpp.F664A82C5515FABF.idx  ble.hpp.35D1E8E188D5898D.idx  ble.test.cpp.65B0ECED8A162D27.idx  catch.hpp.F6CDEF43619A54DB.idx  catch2_main.cpp.4D5127F1C2342CD5.idx
lib/catch2/: catch.hpp
src/: ble.cpp  ble.go  ble.hpp
test/: ble.test.cpp
